@@ -19,6 +19,14 @@
 
 #include "enigma.h"
 
+char *fatal_error_string;
+jmp_buf fatal_error_jmp_buf;
+
+void fatal(char *string) {
+    fatal_error_string = string;
+    longjmp(fatal_error_jmp_buf, 1);
+}
+
 /*
  * See if a line begins with a given header text.
  */
